Refactored lobby map from LobbyServer in a container class, added lobby leave functionality