@@ -2,7 +2,6 @@ package org.albard.dubito.app;
 
 import java.io.IOException;
 import java.time.Duration;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 
@@ -18,6 +17,7 @@ import org.albard.dubito.app.lobby.messages.UpdateLobbyFailedMessage;
 import org.albard.dubito.app.lobby.messages.UpdateLobbyInfoMessage;
 import org.albard.dubito.app.messaging.MessageSerializer;
 import org.albard.dubito.app.messaging.MessengerFactory;
+import org.albard.dubito.app.messaging.messages.ErrorGameMessageBase;
 import org.albard.dubito.app.network.PeerEndPoint;
 import org.albard.dubito.app.network.PeerId;
 import org.albard.dubito.app.network.PeerNetwork;
@@ -38,38 +38,24 @@ public final class LobbyServerManagementTest {
             client.connectToPeer(PeerEndPoint.createFromValues("127.0.0.1", 9000));
 
             final LobbyInfo info = new LobbyInfo("Test Lobby", password);
-            final List<LobbyCreatedMessage> createReceived = new ArrayList<>();
-            final List<LobbyUpdatedMessage> updateReceived = new ArrayList<>();
-            final List<CreateLobbyFailedMessage> failReceived = new ArrayList<>();
-            client.addMessageListener(m -> {
-                if (m instanceof LobbyCreatedMessage createdMessage) {
-                    createReceived.add(createdMessage);
-                    return true;
-                }
-                if (m instanceof LobbyUpdatedMessage updatedMessage) {
-                    updateReceived.add(updatedMessage);
-                    return true;
-                }
-                if (m instanceof CreateLobbyFailedMessage failMessage) {
-                    failReceived.add(failMessage);
-                    return true;
-                }
-                return false;
-            });
+            final List<LobbyCreatedMessage> createReceived = TestUtilities.addMessageListener(LobbyCreatedMessage.class,
+                    client);
+            final List<LobbyUpdatedMessage> updateReceived = TestUtilities.addMessageListener(LobbyUpdatedMessage.class,
+                    client);
+            final List<ErrorGameMessageBase> failReceived = TestUtilities.addMessageListener(ErrorGameMessageBase.class,
+                    client);
+
             client.sendMessage(new CreateLobbyMessage(client.getLocalPeerId(), null, info));
             Thread.sleep(Duration.ofSeconds(1));
 
             Assertions.assertEquals(1, server.getLobbyCount());
-            final Lobby lobby = server.getLobbies().get(0);
+            final Lobby lobby = server.getLobbies().getFirst();
             Assertions.assertEquals(1, createReceived.size());
-            final LobbyCreatedMessage createdMessage = createReceived.get(0);
-            Assertions.assertEquals(lobby.getId(), createdMessage.getNewLobbyId());
+            Assertions.assertEquals(lobby.getId(), createReceived.getFirst().getNewLobbyId());
             Assertions.assertEquals(1, updateReceived.size());
-            final LobbyUpdatedMessage updatedMessage = updateReceived.get(0);
             AssertionsUtilities.assertLobby(client.getLocalPeerId(), info, lobby.getId(),
-                    Set.of(client.getLocalPeerId()), updatedMessage.getLobby());
-            Assertions.assertEquals(0, failReceived.size(),
-                    () -> "Lobby creation has failed: " + failReceived.get(0).getErrors());
+                    Set.of(client.getLocalPeerId()), updateReceived.getFirst().getLobby());
+            Assertions.assertEquals(0, failReceived.size());
         }
     }
 
@@ -82,24 +68,13 @@ public final class LobbyServerManagementTest {
             client.connectToPeer(PeerEndPoint.createFromValues("127.0.0.1", 9000));
 
             final LobbyInfo info = new LobbyInfo(name, "");
-            final List<LobbyCreatedMessage> createReceived = new ArrayList<>();
-            final List<LobbyUpdatedMessage> updateReceived = new ArrayList<>();
-            final List<CreateLobbyFailedMessage> failReceived = new ArrayList<>();
-            client.addMessageListener(m -> {
-                if (m instanceof LobbyCreatedMessage createdMessage) {
-                    createReceived.add(createdMessage);
-                    return true;
-                }
-                if (m instanceof LobbyUpdatedMessage updatedMessage) {
-                    updateReceived.add(updatedMessage);
-                    return true;
-                }
-                if (m instanceof CreateLobbyFailedMessage failMessage) {
-                    failReceived.add(failMessage);
-                    return true;
-                }
-                return false;
-            });
+            final List<LobbyCreatedMessage> createReceived = TestUtilities.addMessageListener(LobbyCreatedMessage.class,
+                    client);
+            final List<LobbyUpdatedMessage> updateReceived = TestUtilities.addMessageListener(LobbyUpdatedMessage.class,
+                    client);
+            final List<ErrorGameMessageBase> failReceived = TestUtilities.addMessageListener(ErrorGameMessageBase.class,
+                    client);
+
             client.sendMessage(new CreateLobbyMessage(client.getLocalPeerId(), null, info));
             Thread.sleep(Duration.ofSeconds(1));
 
@@ -107,8 +82,8 @@ public final class LobbyServerManagementTest {
             Assertions.assertEquals(0, updateReceived.size());
             Assertions.assertEquals(0, server.getLobbyCount());
             Assertions.assertEquals(1, failReceived.size());
-            final CreateLobbyFailedMessage failedMessage = failReceived.get(0);
-            AssertionsUtilities.assertLobbyNameValidationErrors(name, failedMessage.getErrors());
+            Assertions.assertTrue(failReceived.getFirst() instanceof CreateLobbyFailedMessage);
+            AssertionsUtilities.assertLobbyNameValidationErrors(name, failReceived.getFirst().getErrors());
         }
     }
 
@@ -120,27 +95,16 @@ public final class LobbyServerManagementTest {
             client.connectToPeer(PeerEndPoint.createFromValues("127.0.0.1", 9000));
 
             final LobbyInfo info = new LobbyInfo("Test Lobby", "");
+            final List<LobbyCreatedMessage> createReceived = TestUtilities.addMessageListener(LobbyCreatedMessage.class,
+                    client);
+            final List<LobbyUpdatedMessage> updateReceived = TestUtilities.addMessageListener(LobbyUpdatedMessage.class,
+                    client);
+            final List<ErrorGameMessageBase> failReceived = TestUtilities.addMessageListener(ErrorGameMessageBase.class,
+                    client);
+
             client.sendMessage(new CreateLobbyMessage(client.getLocalPeerId(), null, info));
             Thread.sleep(Duration.ofSeconds(1));
 
-            final List<LobbyCreatedMessage> createReceived = new ArrayList<>();
-            final List<LobbyUpdatedMessage> updateReceived = new ArrayList<>();
-            final List<CreateLobbyFailedMessage> failReceived = new ArrayList<>();
-            client.addMessageListener(m -> {
-                if (m instanceof LobbyCreatedMessage createdMessage) {
-                    createReceived.add(createdMessage);
-                    return true;
-                }
-                if (m instanceof LobbyUpdatedMessage updatedMessage) {
-                    updateReceived.add(updatedMessage);
-                    return true;
-                }
-                if (m instanceof CreateLobbyFailedMessage failMessage) {
-                    failReceived.add(failMessage);
-                    return true;
-                }
-                return false;
-            });
             client.sendMessage(new CreateLobbyMessage(client.getLocalPeerId(), null, info));
             Thread.sleep(Duration.ofSeconds(1));
 
@@ -148,8 +112,8 @@ public final class LobbyServerManagementTest {
             Assertions.assertEquals(1, createReceived.size());
             Assertions.assertEquals(1, updateReceived.size());
             Assertions.assertEquals(1, failReceived.size());
-            final CreateLobbyFailedMessage failedMessage = failReceived.get(0);
-            Assertions.assertTrue(failedMessage.getErrors().contains("user already in a lobby"));
+            Assertions.assertTrue(failReceived.getFirst() instanceof CreateLobbyFailedMessage);
+            Assertions.assertTrue(failReceived.getFirst().getErrors().contains("user already in a lobby"));
         }
     }
 
@@ -160,39 +124,29 @@ public final class LobbyServerManagementTest {
                         new MessengerFactory(MessageSerializer.createJson()))) {
             client.connectToPeer(PeerEndPoint.createFromValues("127.0.0.1", 9000));
 
+            final LobbyInfo startingInfo = new LobbyInfo("Test Lobby", "");
             final LobbyInfo newInfo = new LobbyInfo("New test Lobby", "password");
-            final List<LobbyCreatedMessage> createReceived = new ArrayList<>();
-            final List<LobbyUpdatedMessage> updateReceived = new ArrayList<>();
-            final List<CreateLobbyFailedMessage> failReceived = new ArrayList<>();
-            client.addMessageListener(m -> {
-                if (m instanceof LobbyCreatedMessage createdMessage) {
-                    createReceived.add(createdMessage);
-                    return true;
-                }
-                if (m instanceof LobbyUpdatedMessage updatedMessage) {
-                    updateReceived.add(updatedMessage);
-                    return true;
-                }
-                if (m instanceof CreateLobbyFailedMessage failMessage) {
-                    failReceived.add(failMessage);
-                    return true;
-                }
-                return false;
-            });
-            client.sendMessage(new CreateLobbyMessage(client.getLocalPeerId(), null, new LobbyInfo("Test Lobby", "")));
+            final List<LobbyCreatedMessage> createReceived = TestUtilities.addMessageListener(LobbyCreatedMessage.class,
+                    client);
+            final List<LobbyUpdatedMessage> updateReceived = TestUtilities.addMessageListener(LobbyUpdatedMessage.class,
+                    client);
+            final List<ErrorGameMessageBase> failReceived = TestUtilities.addMessageListener(ErrorGameMessageBase.class,
+                    client);
+
+            client.sendMessage(new CreateLobbyMessage(client.getLocalPeerId(), null, startingInfo));
             Thread.sleep(Duration.ofSeconds(1));
 
-            final LobbyId lobbyId = server.getLobbies().get(0).getId();
+            final LobbyId lobbyId = server.getLobbies().getFirst().getId();
             client.sendMessage(new UpdateLobbyInfoMessage(client.getLocalPeerId(), null, lobbyId, newInfo));
             Thread.sleep(Duration.ofSeconds(1));
 
             Assertions.assertEquals(1, server.getLobbyCount());
-            final Lobby lobby = server.getLobbies().get(0);
+            final Lobby lobby = server.getLobbies().getFirst();
             Assertions.assertEquals(1, createReceived.size());
-            Assertions.assertEquals(1, updateReceived.size());
+            Assertions.assertEquals(2, updateReceived.size());
             Assertions.assertEquals(0, failReceived.size());
             AssertionsUtilities.assertLobby(client.getLocalPeerId(), newInfo, lobby.getId(),
-                    Set.of(client.getLocalPeerId()), updateReceived.get(0).getLobby());
+                    Set.of(client.getLocalPeerId()), updateReceived.getLast().getLobby());
         }
     }
 
@@ -205,31 +159,29 @@ public final class LobbyServerManagementTest {
             client.connectToPeer(PeerEndPoint.createFromValues("127.0.0.1", 9000));
 
             final LobbyInfo initialInfo = new LobbyInfo("Test Lobby", "password");
-            final boolean[] failReceived = new boolean[] { false };
-            client.addMessageListener(m -> {
-                if (m instanceof LobbyUpdatedMessage) {
-                    Assertions.fail("Lobby was updated succesfully");
-                    return true;
-                }
-                if (m instanceof UpdateLobbyFailedMessage updateLobbyFailedMessage) {
-                    Assertions.assertEquals(1, updateLobbyFailedMessage.getErrors().size());
-                    AssertionsUtilities.assertLobbyNameValidationErrors(name, updateLobbyFailedMessage.getErrors());
-                    failReceived[0] = true;
-                }
-                return false;
-            });
+            final List<LobbyCreatedMessage> createReceived = TestUtilities.addMessageListener(LobbyCreatedMessage.class,
+                    client);
+            final List<LobbyUpdatedMessage> updateReceived = TestUtilities.addMessageListener(LobbyUpdatedMessage.class,
+                    client);
+            final List<ErrorGameMessageBase> failReceived = TestUtilities.addMessageListener(ErrorGameMessageBase.class,
+                    client);
+
             client.sendMessage(new CreateLobbyMessage(client.getLocalPeerId(), null, initialInfo));
             Thread.sleep(Duration.ofSeconds(1));
 
-            final LobbyId lobbyId = server.getLobbies().get(0).getId();
+            final LobbyId lobbyId = server.getLobbies().getFirst().getId();
             client.sendMessage(
                     new UpdateLobbyInfoMessage(client.getLocalPeerId(), null, lobbyId, new LobbyInfo(name, "")));
             Thread.sleep(Duration.ofSeconds(1));
 
-            final Lobby lobby = server.getLobbies().get(0);
+            final Lobby lobby = server.getLobbies().getFirst();
             AssertionsUtilities.assertLobby(client.getLocalPeerId(), initialInfo, lobby.getId(),
                     Set.of(client.getLocalPeerId()), lobby);
-            Assertions.assertTrue(failReceived[0]);
+            Assertions.assertEquals(1, createReceived.size());
+            Assertions.assertEquals(1, updateReceived.size());
+            Assertions.assertEquals(1, failReceived.size());
+            Assertions.assertTrue(failReceived.getFirst() instanceof UpdateLobbyFailedMessage);
+            AssertionsUtilities.assertLobbyNameValidationErrors(name, failReceived.getFirst().getErrors());
         }
     }
 }
